k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clouddocs
  labels:
    app.kubernetes.io/name: clouddocs
