k8s/postgres-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: clouddocs
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: clouddocs-postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: clouddocs
spec:
  serviceName: "postgres-service"
  replicas: 1
  selector:
    matchLabels:
      app: clouddocs-postgres
  template:
    metadata:
      labels:
        app: clouddocs-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
