k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: clouddocs
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: clouddocs-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: clouddocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clouddocs-redis
  template:
    metadata:
      labels:
        app: clouddocs-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
